--- a/src/webui/_locales/zh/messages.json
+++ b/src/webui/_locales/zh/messages.json
@@ -24,7 +24,7 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Logs' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
     },
     "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
-        "message": "Setting a Domain requires setting a Username and Password",
+        "message": "设置一个域名的同时请设置用户名和密码",
         "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#error-alert": {
@@ -260,7 +260,7 @@
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
     },
     "settings#disable-timeouts#help-text": {
-        "message": "If enabled, communication with the Psiphon server will not time out.",
+        "message": "如果开启，和赛风服务器间的连接将不会超时。",
         "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
     },
     "nav#connection#stopped": {
@@ -388,7 +388,7 @@
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
     "settings#upstream-proxy#set-username-password-error-msg": {
-        "message": "You must set both Username and Password, or leave both blank for no authentication.",
+        "message": "你必须设置用户名和密码，或者把两栏都留空。",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
     "settings#transport-mode#check-label": {
@@ -428,7 +428,7 @@
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
-        "message": "Setting a Username and Password also requires setting a Hostname and Port",
+        "message": "设置用户名和密码的同时请设置主机名和端口",
         "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#disable-timeouts#heading": {
@@ -460,7 +460,7 @@
         "description": "The text below the 'happy face' feedback choice."
     },
     "settings#upstream-proxy#domain-label": {
-        "message": "Domain",
+        "message": "域名",
         "description": "Label for the text box where the user can set the domain for the 'upstream proxy'."
     },
     "about#wordart-tag": {
