--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -484,6 +484,14 @@
     "message": "Explore beyond your borders!",
     "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
   },
+  "appbackend#state-connected-reminder-title": {
+    "message": "Psiphon is keeping you connected",
+    "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server."
+  },
+  "appbackend#state-connected-reminder-body": {
+    "message": "Click to see fresh new content from Psiphon!",
+    "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to click to see the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
+  },
   "appbackend#minimized-to-systray-title": {
     "message": "Psiphon has been minimized to the notification area",
     "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons)."
