--- a/src/webui/_locales/ar/messages.json
+++ b/src/webui/_locales/ar/messages.json
@@ -24,7 +24,7 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Logs' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
     },
     "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
-        "message": "Setting a Domain requires setting a Username and Password",
+        "message": "يتطلب ظبط النطاق تعيين اسم مستخدم وكلمة مرور",
         "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#error-alert": {
@@ -48,7 +48,7 @@
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "settings#disable-timeouts#enable-label": {
-        "message": "Disable timeouts for slow networks",
+        "message": "إبطال الانقطاعات للإتصالات البطيئة ",
         "description": "The label on the checkbox that enables 'Disable Timeouts' mode."
     },
     "settings#egress-region#select-in": {
@@ -96,7 +96,7 @@
         "description": "Message shown to user after their feedback has been sent successufully"
     },
     "settings#upstream-proxy#password-label": {
-        "message": "Password",
+        "message": "كلمة المرور",
         "description": "Label for the text box where the user can set the password for the 'upstream proxy'."
     },
     "appbackend#state-stopped-title": {
@@ -114,6 +114,10 @@
     "settings#upstream-proxy#skip-label": {
         "message": "لا تستعمل أبستريم بروكسي  ",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
+    },
+    "appbackend#state-connected-reminder-title": {
+        "message": "Psiphon is keeping you connected",
+        "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server."
     },
     "settings#egress-region#select-ca": {
         "message": "كندا",
@@ -260,7 +264,7 @@
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
     },
     "settings#disable-timeouts#help-text": {
-        "message": "If enabled, communication with the Psiphon server will not time out.",
+        "message": "إذا تم تمكين الاتصال بخادم سايفون فانه لن يتوقف.",
         "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
     },
     "nav#connection#stopped": {
@@ -320,7 +324,7 @@
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network."
     },
     "settings#disable-timeouts#reason": {
-        "message": "When enabling this over a very slow network connection, you are less likely to experience unexpected disconnections.",
+        "message": "عند تمكين هذا على اتصال بطيء جدا، تكون أقل عرضة لقطع اتصال غير متوقع.",
         "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
     },
     "nav#about": {
@@ -387,8 +391,12 @@
         "message": "وحدهم ال HTTP بروكسي  الذين يدعمون HTTPS مسموح بهم.",
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
+    "appbackend#state-connected-reminder-body": {
+        "message": "Click to see fresh new content from Psiphon!",
+        "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to click to see the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
+    },
     "settings#upstream-proxy#set-username-password-error-msg": {
-        "message": "You must set both Username and Password, or leave both blank for no authentication.",
+        "message": "يجب أن تحدد كل من إسم المستخدم و كلمة المرور، أو تترك مكانهما خاليين لعدم المصادقة.",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
     "settings#transport-mode#check-label": {
@@ -428,11 +436,11 @@
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
     "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
-        "message": "Setting a Username and Password also requires setting a Hostname and Port",
+        "message": "يتطلب تعيين اسم المستخدم وكلمة المرور تعيين اسم المضيف والمنفذ أيضا. ",
         "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#disable-timeouts#heading": {
-        "message": "Disable Timeouts for Slow Networks",
+        "message": "تعطيل المهلات بالنسبة للشبكات البطيئة",
         "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
     },
     "settings#upstream-proxy#by-default": {
@@ -460,7 +468,7 @@
         "description": "The text below the 'happy face' feedback choice."
     },
     "settings#upstream-proxy#domain-label": {
-        "message": "Domain",
+        "message": "النطاق",
         "description": "Label for the text box where the user can set the domain for the 'upstream proxy'."
     },
     "about#wordart-tag": {
@@ -468,7 +476,7 @@
         "description": "The application/product/tool tagline/slogan/motto part of the fancy title at the top of the 'About' page. 'Beyond Borders' is the slogan that is also used on the Psiphon website -- it is meant to suggest that Psiphon can help users to get to the internet beyond the border (firewall) of the country they live in."
     },
     "settings#upstream-proxy#username-label": {
-        "message": "Username",
+        "message": "اسم المستخدم",
         "description": "Label for the text box where the user can set the username for the 'upstream proxy'."
     },
     "connection#wait-btn": {
@@ -476,7 +484,7 @@
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
     "settings#upstream-proxy#set-hostname-port-error-msg": {
-        "message": "You must set both Hostname and Port, or leave both blank for automatic selection.",
+        "message": "يجب أن تحدد كل من إسم المضيف والمنفذ ، أو تترك مكانهما خاليين للإنتقاء الأوتوماتيكي.  ",
         "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
     },
     "settings#transport-mode#help-text": {
