--- a/src/webui/_locales/zh/messages.json
+++ b/src/webui/_locales/zh/messages.json
@@ -24,7 +24,7 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Logs' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
     },
     "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
-        "message": "设置一个域名的同时请设置用户名和密码",
+        "message": "设置域名的同时请设置用户名和密码",
         "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
     "settings#error-alert": {
@@ -48,7 +48,7 @@
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
     "settings#disable-timeouts#enable-label": {
-        "message": "慢速网络中禁用超时断线",
+        "message": "慢速网络中禁用超时",
         "description": "The label on the checkbox that enables 'Disable Timeouts' mode."
     },
     "settings#egress-region#select-in": {
@@ -114,6 +114,10 @@
     "settings#upstream-proxy#skip-label": {
         "message": "不使用上层代理",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
+    },
+    "appbackend#state-connected-reminder-title": {
+        "message": "Psiphon is keeping you connected",
+        "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server."
     },
     "settings#egress-region#select-ca": {
         "message": "加拿大",
@@ -260,7 +264,7 @@
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
     },
     "settings#disable-timeouts#help-text": {
-        "message": "如果开启，和赛风服务器间的连接将不会超时。",
+        "message": "如果启用，和赛风服务器间的连接将不会超时。",
         "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
     },
     "nav#connection#stopped": {
@@ -320,7 +324,7 @@
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network."
     },
     "settings#disable-timeouts#reason": {
-        "message": "如果启用此选项，在使用极慢的网络连接时，意外断开会减少。",
+        "message": "在使用极慢的网络连接时启用此选项，意外断线会减少。",
         "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
     },
     "nav#about": {
@@ -387,8 +391,12 @@
         "message": "只允许支持 HTTPS 的 HTTP 代理。",
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
+    "appbackend#state-connected-reminder-body": {
+        "message": "Click to see fresh new content from Psiphon!",
+        "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to click to see the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
+    },
     "settings#upstream-proxy#set-username-password-error-msg": {
-        "message": "你必须设置用户名和密码，或者把两栏都留空。",
+        "message": "您必须同时设置用户名和密码，或者把两栏都留空表示不需要验证。",
         "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
     },
     "settings#transport-mode#check-label": {
@@ -476,7 +484,7 @@
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
     "settings#upstream-proxy#set-hostname-port-error-msg": {
-        "message": "您必须同时设置主机名和端口，或者留空两项表示自动选择。",
+        "message": "您必须同时设置主机名和端口，或者把两栏都留空表示自动选择。",
         "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
     },
     "settings#transport-mode#help-text": {
